--- a/templates/search.html
+++ b/templates/search.html
@@ -4,13 +4,16 @@ total : {{ .total }}
 <br>
 <table>
     <tr>
-        <th>COUNT</th>
         <th>id</th>
         <th>PhoneNumber</th>
         <th>API</th>
     </tr>
-    {{range .}}
-        {{.}}
+    {{range .Lists}}
+        <tr>
+            <th>{{.id}}</th>
+            <th>{{.phone_number}}</th>
+            <th>{{.api}}</th>
+        </tr>
     {{end}}
 </table>
 
