--- a/templates/index.html
+++ b/templates/index.html
@@ -21,11 +21,11 @@
     Total SMS {{.total}}
 </p1>
 <br><br>
-<h1>Search phone number</h1>
+<h1>Find phone number</h1>
 <form action="/search" , method="POST">
     <label for="phone">Phone Number</label><br>
-    <input type="text" id="phone" name="phone" value="90319000000"><br>
-    <input type="submit" value="Submit">
+    <input type="text" id="phone" name="phone" value="9031900000"><br>
+    <input type="submit" value="Find">
 </form>
 </h1>
 
